# sda

./: CMakeLists.txt  Dockerfile  Jenkinsfile  PI.cmake_  README.md  ToDo.md  _conanfile.txt  conanfile.txt
doc/: myWbs.puml  sda.puml
src/: CMakeLists.txt  IControlStrategy.hh  IPowerControlStrategy.hh  ISenecResultObserver.hh  ISenecResultSubject.hh  chat.cc  configManager.cc  configManager.hh  conversion.hh  converter.hh  dataAcquisitionDefines.hh  defaultControlStrategy.hh  global.cc  global.hh  gpioManager.cc  gpioManager.hh  main.cc  mqttWrapper.cc  mqttWrapper.hh  oneWireSensorInterface.cc  oneWireSensorInterface.hh  openWbDataAcquisition.hh  openWbDataAcquisition_.hh  params.json  powerControl.cc  powerControl.hh  powerControlStrategyDefault.hh  powerControlStrategyExcess.cc  powerControlStrategyExcess.hh  senecDataAcquisition.cc  senecDataAcquisition.hh  senecDataAcquisitionCurl.cc  senecDataAcquisitionCurl.hh  senecResultDto.hh  senecResultObserver.cc  senecResultObserver.hh  senecResultSubject.hh  solarDataAcquisition.cc  solarDataAcquisition.hh  solarResultDto.hh  (+1 more)
test/: CMakeLists.txt  configManagerTest.cc  mainTest.cc  oneWireSensorInterfaceTest.cc  powerControlStrategyExcessTest.cc  senecDataAcquisitionTest.cc  solarDataAcquisitionTest.cc  testDefines.hh
